<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="spotif_streamer">Spotify Streamer</string>
    <string name="super_duo">Super Duo</string>
    <string name="score_app">Score App</string>
    <string name="lib_app">Library App</string>
    <string name="build_It_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone:My own App</string>
    <string name="my_nano_app">My Nanodegree App</string>
    <string name="this_button_will_launch_my">This button will launch my</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
